--- a/cfg/config.cfg
+++ b/cfg/config.cfg
@@ -1,4 +1,5 @@
 cfgver "1"
+
 unbindall
 bind "1" "slot1"
 bind "2" "slot2"
@@ -55,7 +56,7 @@ bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MWHEELUP" "invprev"
 bind "MWHEELDOWN" "invnext"
-cl_playermodel "models"
+cl_playermodel "models/player/goon.mdl"
 windows_speaker_config "7"
 cl_logofile "materials/vgui/logos/spray_canned.vtf"
 con_enable "1"
