GITIGNORE SHUT UP

--- a/cfg/config.cfg
+++ b/cfg/config.cfg
@@ -1,5 +1,4 @@
 cfgver "1"
-
 unbindall
 bind "1" "slot1"
 bind "2" "slot2"
@@ -12,7 +11,8 @@ bind "c" "impulse 50"
 bind "d" "+moveright"
 bind "e" "+use"
 bind "f" "impulse 100"
-bind "g" "dropprimary"
+bind "g" "phys_swap"
+bind "p" "headtrack_reset_home_pos"
 bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+back"
@@ -44,20 +44,25 @@ bind "SHIFT" "+speed"
 bind "ALT" "+walk"
 bind "CTRL" "+duck"
 bind "UPARROW" "+forward"
-bind "LEFTARROW" "+left"
 bind "DOWNARROW" "+back"
-bind "RIGHTARROW" "+right"
 bind "F3" "askconnect_accept"
 bind "F5" "jpeg"
 bind "F6" "save quick"
 bind "F7" "load quick"
+bind "F9" "vr_toggle"
 bind "F10" "quit prompt"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
-bind "MWHEELUP" "invprev"
-bind "MWHEELDOWN" "invnext"
-cl_playermodel "models/player/goon.mdl"
+bind "MWHEELUP" "+jump"
+bind "MWHEELDOWN" "+jump"
+cl_chatfilter_version "1"
+m_rawinput "1"
+mat_software_aa_strength "0.000000"
+mat_software_aa_strength_vgui "1.000000"
+cl_playermodel "models/combine_soldier.mdl"
+sv_skyname "sky_day02_09"
 windows_speaker_config "7"
+name "mama coco brawl"
 cl_logofile "materials/vgui/logos/spray_canned.vtf"
 con_enable "1"
 r_waterforceexpensive "1"
